<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>es.uam.eps.ir</groupId>
    <artifactId>knnbandit</artifactId>
    <version>1.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-core</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-fast</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-mf</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-nn</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-formats</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-diversity</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>colt</groupId>
            <artifactId>colt</artifactId>
            <version>1.2.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.googlecode.matrix-toolkits-java</groupId>
            <artifactId>mtj</artifactId>
            <version>1.0.4</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>es.uam.eps.ir.knnbandit.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>